@@ -1,0 +1,3 @@
+\indexentry{foo|(}{1}
+\indexentry{foo|mac}{1}
+\indexentry{foo|)}{1}
