@@ -1,0 +1,5 @@
+\begin{theindex}
+
+  \item foo, \mac{1}, 1
+
+\end{theindex}
